--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "dependencies": {
     "@remix-run/react": "^2.16.1",
     "@remix-run/server-runtime": "^2.16.1",
-    "graphql": "^16.10.0",
     "@shopify/hydrogen": "2025.1.4",
     "@shopify/remix-oxygen": "^2.0.12",
+    "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
+    "lucide-react": "^0.507.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
