--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/server-runtime": "^2.16.1",
     "@shopify/hydrogen": "2025.1.4",
     "@shopify/remix-oxygen": "^2.0.12",
+    "framer-motion": "^12.10.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
